@@ -33,6 +33,8 @@ https://github.com/elastic/beats/compare/v6.0.0-alpha2...master[Check the HEAD d
 
 *Packetbeat*
 
+- Remove the already unsupported `pf_ring` sniffer option. {pull}4608[4608]
+
 *Winlogbeat*
 
 ==== Bugfixes
